# pybind11_example

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/python_wrapper/: CMakeLists.txt  fun_wrapper.cpp  obj_wrapper.cpp
core/src/: CMakeLists.txt  fun.cpp  fun.hpp  main.cpp
ir/: CMakeLists.txt  readme.md
ir/schema/: cds.fbs  readme.md
ir/src/: main.cpp
python/: main.py
script/: gen_schma.sh
